[tool.poetry]
name = "imperium"
version = "0.1.0"
description = "A space empire-building game"
authors = ["Christopher M. Dicely <cmdicely@gmail.com>"]
license = "GPL-2.0-only"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
imperium = 'imperium:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
